--- a/app-swoosh/app-swoosh/Base.lproj/Main.storyboard
+++ b/app-swoosh/app-swoosh/Base.lproj/Main.storyboard
@@ -52,6 +52,9 @@
                                 <state key="normal" title="GET STARTED">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="Hbn-CB-B74" kind="presentation" modalPresentationStyle="fullScreen" id="sxj-2k-ujm"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -159,6 +162,17 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vID-X0-e51">
+                                <rect key="frame" x="10" y="54" width="35" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="35" id="4Cy-HI-6KS"/>
+                                    <constraint firstAttribute="height" constant="35" id="BT0-Ks-ajz"/>
+                                </constraints>
+                                <state key="normal" image="backButton"/>
+                                <connections>
+                                    <segue destination="uGl-zc-Ypg" kind="unwind" unwindAction="unwindFromSkillVCWithUnwindSegue:" id="P84-hn-SEs"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="3Ml-sh-nNX"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -172,16 +186,20 @@
                             <constraint firstItem="D2x-VB-oAf" firstAttribute="leading" secondItem="3Ml-sh-nNX" secondAttribute="leading" id="Gxe-KP-h1A"/>
                             <constraint firstItem="D2x-VB-oAf" firstAttribute="trailing" secondItem="3Ml-sh-nNX" secondAttribute="trailing" id="KbQ-uR-jpn"/>
                             <constraint firstItem="D2x-VB-oAf" firstAttribute="top" secondItem="INd-4P-Vep" secondAttribute="top" id="Op6-5A-7LQ"/>
+                            <constraint firstItem="vID-X0-e51" firstAttribute="top" secondItem="3Ml-sh-nNX" secondAttribute="top" constant="10" id="P3R-FR-wwY"/>
                             <constraint firstItem="f4T-Pw-896" firstAttribute="top" secondItem="Dlb-ng-kAv" secondAttribute="bottom" constant="50" id="T5o-VX-GvP"/>
+                            <constraint firstItem="vID-X0-e51" firstAttribute="leading" secondItem="3Ml-sh-nNX" secondAttribute="leading" constant="10" id="Xsy-hC-il7"/>
                             <constraint firstItem="f4T-Pw-896" firstAttribute="leading" secondItem="3Ml-sh-nNX" secondAttribute="leading" constant="20" id="nBv-Nb-OlO"/>
                             <constraint firstAttribute="bottom" secondItem="D2x-VB-oAf" secondAttribute="bottom" id="o0B-ko-mUU"/>
                             <constraint firstItem="3Ml-sh-nNX" firstAttribute="trailing" secondItem="dKC-lt-Lcv" secondAttribute="trailing" constant="20" id="u1Y-Cw-6vH"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="8ED-5z-rqZ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3PU-KB-Ipp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="uGl-zc-Ypg" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="756.92307692307691" y="90.995260663507111"/>
+            <point key="canvasLocation" x="756" y="90.404797601199405"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="kuW-WD-npt">
@@ -265,6 +283,7 @@
                             <constraint firstItem="EW2-Hs-1B4" firstAttribute="top" secondItem="iTl-dA-V4t" secondAttribute="top" constant="55" id="vJb-tn-QZA"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="WR1-tU-3dt"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FJc-hx-Xp2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -272,6 +291,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="backButton" width="29" height="24"/>
         <image name="beginnerBallerBG" width="414" height="736"/>
         <image name="desiredLeagueBG" width="414" height="736"/>
         <image name="swooshLogo" width="119" height="20"/>
